--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Presupuesto Disponible</title>
     <div class="cabecero">
         <div class="presupuesto">
-            <div class="presupuesto_titulo">Puresupuesto Disponible
+            <div class="presupuesto_titulo">Presupuesto Disponible
             </div>
         </div>
     </div>
