--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
       </form>
 </head>
 <body>
-    
+    <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
 </body>
 </html>
