--- a/index.html
+++ b/index.html
@@ -48,6 +48,25 @@
           </div>
         </div>
       </form>
+      <div class="contenedor limpiarEstilos">
+        <div class="ingreso">
+          <h2 class="ingreso_titulo">Ingresos</h2>
+          <div id="lista-ingresos">
+            <div class="elemento limpiarEstilos">
+              <div class="elemento_descripcion">Salario</div>
+              <div class="derecha limpiarEstilos">
+                <div class="elemento_valor">+2,200.00</div>
+                <div class="elemento_eliminar">
+                  <button class="elemento_eliminar_btn">
+                    <ion-icon name="close-circle-outline"></ion-icon>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
