--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <div class="presupuesto_ingreso" class="limpiarEstilos">
         <div class="presupuesto_ingreso--texto">Ingresos</div>
         <div class="derecha">
-            <div class="presupuesto_ingreso--valor">
-                +4,000.00
+            <div class="presupuesto_ingreso--valor">+4,000.00
             </div>
             <div class="presupuesto_ingreso--porcentaje">
             </div>
