--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </select>
             <input type="text" class="agregar_descripcion" id="descripcion" value="Agregar Descripción">
             <input type="number" class="agregar_valor" value="valor" step="any">
-            <button class="agregar_btn">
+            <button class="agregar_btn" onclick="function cargarCabecero()">
               <ion-icon name="checkmark-circle-outline"></ion-icon>
             </button>
           </div>
