--- a/index.html
+++ b/index.html
@@ -106,6 +106,29 @@
       </div>
 </head>
 <body>
+    <script>
+        
+  // Crea la función cargarCabecero
+  const cargarCabecero = () => {
+    const presupuesto = totalIngresos() - totalEgresos();
+    const porcentajeEgreso = totalEgresos() / totalIngresos();
+    console.log(presupuesto);
+    console.log(porcentajeEgreso);
+    console.log(totalIngresos());
+    console.log(totalEgresos());
+  };
+  
+  // Define los arreglos
+  let egresos = {
+    Renta: 900,
+    Ropa: 400,
+  };
+  
+  let ingresos = {
+    Quincena: 9000,
+    Venta: 400,
+  };
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
 </body>
