--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <option value="egreso">- Egreso</option>
             </select>
             <input type="text" class="agregar_descripcion" id="descripcion" value="Agregar Descripción">
-            <input type="number" class="agregar_valor" value="valor" step="any">
+            <input type="number" class="agregar_valor"  step="any">
             <button class="agregar_btn" onclick="function cargarCabecero()">
               <ion-icon name="checkmark-circle-outline"></ion-icon>
             </button>
