--- a/index.html
+++ b/index.html
@@ -107,8 +107,24 @@
 </head>
 <body>
     <script>
-        
-  // Crea la función cargarCabecero
+// Crea la función totalIngresos
+const totalIngresos = () => {
+    let totalIngreso = 0;
+    for (let ingreso of Object.values(ingresos)) {
+      totalIngreso += ingreso;
+    }
+    return totalIngreso;
+  };
+  
+// Crea la función totalEgresos
+  const totalEgresos = () => {
+    let totalEgreso = 0;
+    for (let egreso of Object.values(egresos)) {
+      totalEgreso += egreso;
+    }
+    return totalEgreso;
+  };
+// Crea la función cargarCabecero
   const cargarCabecero = () => {
     const presupuesto = totalIngresos() - totalEgresos();
     const porcentajeEgreso = totalEgresos() / totalIngresos();
@@ -117,13 +133,11 @@
     console.log(totalIngresos());
     console.log(totalEgresos());
   };
-  
   // Define los arreglos
   let egresos = {
     Renta: 900,
     Ropa: 400,
   };
-  
   let ingresos = {
     Quincena: 9000,
     Venta: 400,
