--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
     <title>Presupuesto Disponible</title>
+  </head>
+  <body>
     <div class="cabecero">
         <div class="presupuesto">
             <div class="presupuesto_titulo">Presupuesto Disponible
@@ -40,60 +42,7 @@
             </select>
             <input type="text" class="agregar_descripcion" id="descripcion" value="Agregar Descripción">
             <input type="number" class="agregar_valor"  step="any">
-            <script>
-                // Define los arreglos
-                  let egresos =[
-                    {
-                      nombre:"renta",
-                      valor: 900,
-                    },
-                    {
-                      nombre:"ropa",
-                      valor:400,
-                    }
-                 ];
-
-                  let ingresos = [
-                    {
-                      nombre:"Quincena",
-                      valor: 9000,
-                    },
-                    {
-                      nombre:"venta",
-                      valor:400,
-
-                    }
-                  ];
-
-                // Crea la función totalIngresos
-                const totalIngresos = () => {
-                    let totalIngreso = 0;
-                    for (let ingreso of ingresos) {
-                      totalIngreso += ingreso.valor;
-                    }
-                    return totalIngreso;
-                  };
-                  
-                // Crea la función totalEgresos
-                  const totalEgresos = () => {
-                    let totalEgreso = 0;
-                    for (let egreso of egresos) {
-                      totalEgreso += egreso.valor;
-                    }
-                    return totalEgreso;
-                  };
-                // Crea la función cargarCabecero
-                  const cargarCabecero = () => {
-                    const presupuesto = totalIngresos() - totalEgresos();
-                    const porcentajeEgreso = totalEgresos() / totalIngresos();
-                    console.log(presupuesto);
-                    console.log(porcentajeEgreso);
-                    console.log(totalIngresos());
-                    console.log(totalEgresos());
-                  };
-                  
-                    </script>
-            <button class="agregar_btn" onclick=cargarCabecero()>
+                      <button type="button" class="agregar_btn" onclick="cargarCabecero()">
               <ion-icon name="checkmark-circle-outline"></ion-icon>
             </button>
           </div>
@@ -157,10 +106,8 @@
           </div>
         </div>
       </div>
-</head>
-<body>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
