--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div class="derecha limpiarEstilos">
                 <div class="elemento_valor">+2,200.00</div>
                 <div class="elemento_eliminar">
-                  <button class="elemento_eliminar_btn">
+                  <button class="elemento_eliminar--btn">
                     <ion-icon name="close-circle-outline"></ion-icon>
                   </button>
                 </div>
@@ -68,7 +68,7 @@
               <div class="derecha limpiarEstilos">
                 <div class="elemento_valor">+1,500.00</div>
                 <div class="elemento_eliminar">
-                  <button class="elemento_eliminar_btn">
+                  <button class="elemento_eliminar--btn">
                     <ion-icon name="close-circle-outline"></ion-icon>
                   </button>
                 </div>
@@ -85,7 +85,7 @@
                 <div class="elemento_valor">-900.00</div>
                 <div class="elemento_porcentaje">21 %</div>
                 <div class="elemento_eliminar">
-                  <button class="elemento_eliminar_btn">
+                  <button class="elemento_eliminar--btn">
                     <ion-icon name="close-circle-outline"></ion-icon>
                   </button>
                 </div>
@@ -97,7 +97,7 @@
                 <div class="elemento_valor">-400.00</div>
                 <div class="elemento_porcentaje">9 %</div>
                 <div class="elemento_eliminar">
-                  <button class="elemento_eliminar_btn">
+                  <button class="elemento_eliminar--btn">
                     <ion-icon name="close-circle-outline"></ion-icon>
                   </button>
                 </div>
