--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
             </div>
         </div>
     </div>
-    <div class="presupuesto_ingreso" class="limpiarEstilos">
+    <div class="presupuesto_ingreso limpiarEstilos">
         <div class="presupuesto_ingreso--texto">Ingresos</div>
         <div class="derecha">
             <div class="presupuesto_ingreso--valor">+4,000.00
             </div>
             <div class="presupuesto_ingreso--porcentaje">
             </div>
-            <div class="presupuesto_egreso" class="limpiarEstilos">
-                <div class="derecha" class="limpiarEstilos">
+            <div class="presupuesto_egreso limpiarEstilos"></div>
+                <div class="derecha limpiarEstilos">
                     <div class="presupuesto_egreso--texto">Egresos</div>
-                    <div class="derecha" class="limpiarEstilos">
+                    <div class="derecha limpiarEstilos">
                         <div class="presupuesto_egreso--valor"> -1,900.00</div>
                         <div class="presupuesto_egreso--porcentaje">45%</div>
                     </div>
