--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
+    <script type="text/javascript" src="/js/app.js"></script>
     <title>Presupuesto Disponible</title>
   </head>
   <body>
@@ -42,7 +43,7 @@
             </select>
             <input type="text" class="agregar_descripcion" id="descripcion" value="Agregar Descripción">
             <input type="number" class="agregar_valor"  step="any">
-                      <button type="button" class="agregar_btn" onclick="cargarCabecero()">
+                      <button type="button" class="agregar_btn"  onclick="cargarCabecero()">
               <ion-icon name="checkmark-circle-outline"></ion-icon>
             </button>
           </div>
