--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
-    <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript, module" src="/js/app.js"></script>
     <title>Presupuesto Disponible</title>
   </head>
   <body>
@@ -43,7 +43,7 @@
             </select>
             <input type="text" class="agregar_descripcion" id="descripcion" value="Agregar Descripción">
             <input type="number" class="agregar_valor"  step="any">
-                      <button type="button" class="agregar_btn"  onclick="cargarCabecero()">
+                      <button id="boton1" type="button" class="agregar_btn">
               <ion-icon name="checkmark-circle-outline"></ion-icon>
             </button>
           </div>
@@ -109,6 +109,5 @@
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
-    <script src="./js/app.js"></script>
-</body>
+    </body>
 </html>
