--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </select>
             <input type="text" class="agregar_descripcion" id="descripcion" value="Agregar Descripción">
             <input type="number" class="agregar_valor"  step="any">
-                      <button id="boton1" type="button" class="agregar_btn">
+                      <button id="boton1" type="button" class="agregar_btn" onclick="cargarCabecero()">
               <ion-icon name="checkmark-circle-outline"></ion-icon>
             </button>
           </div>
@@ -109,5 +109,6 @@
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
+    <button onclick="cargarCabecero()">asdfg</button>
     </body>
 </html>
