--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
     <title>Presupuesto Disponible</title>
   </head>
-  <body onload="cargarCabecero()">
+  <body>
     <div class="cabecero">
         <div class="presupuesto">
             <div class="presupuesto_titulo">Presupuesto Disponible
@@ -42,7 +42,7 @@
             </select>
             <input type="text" class="agregar_descripcion" id="descripcion" value="Agregar Descripción">
             <input type="number" class="agregar_valor"  step="any">
-                      <button id="boton1" type="button" class="agregar_btn">
+                      <button id="boton1" type="button" class="agregar_btn" onclick="cargarCabecero()">
               <ion-icon name="checkmark-circle-outline"></ion-icon>
             </button>
           </div>
@@ -108,9 +108,6 @@
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
-    <script src="/js/Dato.js"></script>
-    <script src="/js/Ingreso.js"></script>
-    <script src="/js/Egreso.js"></script>
     <script src="/js/app.js"></script>
     </body>
 </html>
