Ultimo que sirve !!

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
             </div>
         </div>
     </div>
+    <div id="presupuesto" class="presupuesto_valor">2000</div>
     <div class="presupuesto_ingreso limpiarEstilos">
         <div class="presupuesto_ingreso--texto">Ingresos</div>
         <div class="derecha">
-            <div class="presupuesto_ingreso--valor">+4,000.00
+            <div id="ingresos" class="presupuesto_ingreso--valor">+4,000.00
             </div>
             <div class="presupuesto_ingreso--porcentaje">
             </div>
@@ -26,8 +27,8 @@
                 <div class="derecha limpiarEstilos">
                     <div class="presupuesto_egreso--texto">Egresos</div>
                     <div class="derecha limpiarEstilos">
-                        <div class="presupuesto_egreso--valor"> -1,900.00</div>
-                        <div class="presupuesto_egreso--porcentaje">45%</div>
+                        <div id="egresos" class="presupuesto_egreso--valor"> -1,900.00</div>
+                        <div id="porcentaje" class="presupuesto_egreso--porcentaje">45%</div>
                     </div>
                 </div>
             </div>
