Ultima version que corre

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
     <title>Presupuesto Disponible</title>
   </head>
-  <body>
+  <body onload="cargarCabecero()">
     <div class="cabecero">
         <div class="presupuesto">
             <div class="presupuesto_titulo">Presupuesto Disponible
@@ -43,7 +43,7 @@
             </select>
             <input type="text" class="agregar_descripcion" id="descripcion" value="Agregar Descripción">
             <input type="number" class="agregar_valor"  step="any">
-                      <button id="boton1" type="button" class="agregar_btn" onclick="cargarCabecero()">
+                      <button id="boton1" type="button" class="agregar_btn" >
               <ion-icon name="checkmark-circle-outline"></ion-icon>
             </button>
           </div>
