--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
               <option value="ingreso" selected>+ Ingreso</option>
               <option value="egreso">- Egreso</option>
             </select>
-            <input type="text" class="agregar_descripcion" id="descripcion" value="Agregar Descripción">
-            <input type="number" class="agregar_valor"  step="any">
+            <input id="descripcion" type="text" class="agregar_descripcion" id="descripcion" value="Agregar Descripción">
+            <input id="valor" type="number" class="agregar_valor"  step="any">
                       <button id="boton1" type="button" class="agregar_btn" onclick="agregarDato()" >
               <ion-icon name="checkmark-circle-outline"></ion-icon>
             </button>
