--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           <h2 class="ingreso_titulo">Ingresos</h2>
           <div id="lista-ingresos">
             <div class="elemento limpiarEstilos">
-              <div class="elemento_descripcion">Salario</div>
+              <div class="elemento_descripcion"></div>
               <div class="derecha limpiarEstilos">
-                <div class="elemento_valor">+2,200.00</div>
+                <div class="elemento_valor"></div>
                 <div class="elemento_eliminar">
                   <button class="elemento_eliminar--btn">
                     <ion-icon name="close-circle-outline"></ion-icon>
@@ -65,9 +65,9 @@
               </div>
             </div>
             <div class="elemento limpiarEstilos">
-              <div class="elemento_descripcion">Venta Coche</div>
+              <div class="elemento_descripcion"></div>
               <div class="derecha limpiarEstilos">
-                <div class="elemento_valor">+1,500.00</div>
+                <div class="elemento_valor"></div>
                 <div class="elemento_eliminar">
                   <button class="elemento_eliminar--btn">
                     <ion-icon name="close-circle-outline"></ion-icon>
@@ -81,10 +81,10 @@
           <h2 class="egreso_titulo">Egresos</h2>
           <div id="lista-egresos">
             <div class="elemento limpiarEstilos">
-              <div class="elemento_descripcion">Renta departamento</div>
+              <div class="elemento_descripcion"></div>
               <div class="derecha limpiarEstilos">
-                <div class="elemento_valor">-900.00</div>
-                <div class="elemento_porcentaje">21 %</div>
+                <div class="elemento_valor"></div>
+                <div class="elemento_porcentaje"></div>
                 <div class="elemento_eliminar">
                   <button class="elemento_eliminar--btn">
                     <ion-icon name="close-circle-outline"></ion-icon>
@@ -93,10 +93,10 @@
               </div>
             </div>
             <div class="elemento limpiarEstilos">
-              <div class="elemento_descripcion">Ropa</div>
+              <div class="elemento_descripcion"></div>
               <div class="derecha limpiarEstilos">
-                <div class="elemento_valor">-400.00</div>
-                <div class="elemento_porcentaje">9 %</div>
+                <div class="elemento_valor"></div>
+                <div class="elemento_porcentaje"></div>
                 <div class="elemento_eliminar">
                   <button class="elemento_eliminar--btn">
                     <ion-icon name="close-circle-outline"></ion-icon>
