--- a/index.html
+++ b/index.html
@@ -109,6 +109,6 @@
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="https://github.com/AlejandroLeon23/Proyecto_Final_Javascript/blob/master/js/app.js"></script>
     </body>
 </html>
